[project]
name = "token-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "outlines-core>=0.2.3",
    "textual>=2.1.2",
    "textual-dev>=1.7.0",
    "tomli>=2.2.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
